--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,14 @@
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 python-jose[cryptography]>=3.3.0
+requests>=2.31.0
 passlib[bcrypt]>=1.7.4
-python-multipart>=0.0.12
+python-multipart>=0.0.6
 pydantic>=2.10.0
 pydantic-settings>=2.6.0
 sqlalchemy>=2.0.35
 aiosqlite>=0.20.0
 python-dotenv>=1.0.0
-httpx>=0.28.0
+httpx>=0.25.0
 pillow>=11.0.0
+psycopg2-binary>=2.9.9
