--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,7 @@ python-jose[cryptography]>=3.3.0
 requests>=2.31.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.6
-pydantic>=2.10.0
+pydantic[email]>=2.10.0
 pydantic-settings>=2.6.0
 sqlalchemy>=2.0.35
 aiosqlite>=0.20.0
