--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]>=0.32.0
 python-jose[cryptography]>=3.3.0
 requests>=2.31.0
 passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
 python-multipart>=0.0.6
 pydantic[email]>=2.10.0
 pydantic-settings>=2.6.0
