feat: Integrate Cloudinary for on-the-fly image optimization across product displays.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,3 +12,9 @@ VITE_GOOGLE_CLIENT_ID=your-google-client-id
 
 # Facebook OAuth (get from Facebook Developers)
 VITE_FACEBOOK_APP_ID=your-facebook-app-id
+
+# Cloudinary Image Optimization (FREE - 25GB bandwidth/month)
+# 1. Create free account at https://cloudinary.com
+# 2. Go to Dashboard and copy your "Cloud name"
+# 3. Paste it below - that's it! No API keys needed for fetch optimization
+VITE_CLOUDINARY_CLOUD_NAME=your-cloud-name
