--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -5,3 +5,7 @@
 VITE_API_URL=https://authentimart.onrender.com/api/v1
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
 VITE_FACEBOOK_APP_ID=your-facebook-app-id
+
+# Cloudinary - Free tier image optimization CDN
+# Create free account at https://cloudinary.com and get your cloud name
+VITE_CLOUDINARY_CLOUD_NAME=dtxhwo67o
